FOF 3.0.13
================================================================================
! mcrypt is deprecated in PHP 7.1. Replacing it with OpenSSL.
+ Relation Form Field now has a "model" attribute for cases when the field name is not the same of the model class name (ie: company_types vs CompanyTypes)
+ Ability to turn off drag'n'drop reordering in Ordering fields because of a bug in Joomla! 3.5+ they don't want to fix (I submitted the PR and they rejected it)
~ Removing visible ordering field from Joomla! 3.5+ when drag'n'drop reordering is enabled due to a bug they don't want to fix (I submitted the PR and they rejected it)
# [LOW] Warning thrown when passing an empty input array to the Container

FOF 3.0.12
================================================================================
# [LOW] gh-617 Notice in DataModel::check() when you have added custom known fields
# [MEDIUM] Component menu item does not appear in the backend when there's another extension with the same element name as the component

FOF 3.0.11
================================================================================
~ Changing the #__akeeba_common table schema
~ Workaround for sites with upper- or mixed-case prefixes / table names on MySQL servers running on case-insensitive filesystems and lower_case_table_names = 1 (default on Windows)

FOF 3.0.10
================================================================================
~ gh-594 Use the correct numeric field types in scaffolding
+ Blade: @token to get Joomla!'s form token
+ Blade: @editor to get Joomla!'s WYSIWYG editor
+ Dispatcher mixin: ViewAliases, creates aliases for view names
# [HIGH] Passing $section in Container::getInstance had practically no effect

FOF 3.0.9
================================================================================
+ Improved detection and removal of duplicate update sites
+ Reset the APC cache, if enabled, before installing/updating an extension using an InstallScript script class.